@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* More chinese
+* OCR working
 * Dotenv
 * Chinese picture
 * Demo docs added
